output.txt
/home/uttam/Documents/cp/1744E1.cpp: In function ‘int main()’:
/home/uttam/Documents/cp/1744E1.cpp:183:5: error: ‘solve’ was not declared in this scope
  183 |     solve();
      |     ^~~~~
